tests/samples/positive/types/slice_basic.ax
module slice_basic;

fn first(values: []const i32) -> i32 {
    return values[0];
}

fn main() -> i32 {
    let values: [4]i32 = [1, 2, 3, 4];
    let all: []const i32 = values[:];
    let prefix: []const i32 = values[:3];
    let suffix: []const i32 = values[1:];
    let middle: []const i32 = all[1:3];
    let tail_from_slice: []const i32 = all[2:];
    return first(all) + prefix[2] + suffix[0] + middle[1] + tail_from_slice[0] - 12;
}
